--- a/resume.html
+++ b/resume.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Dives+Akuru&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="/assest/favicon.jpg">
-    <link rel="stylesheet" href="/css/resume.css">
+    <link rel="icon" type="image/x-icon" href="assest/favicon.jpg">
+    <link rel="stylesheet" href="css/resume.css">
 </head>
 <body>
     <div class="content-wrapper" id="container1">
@@ -95,16 +95,16 @@ With Virtual Try-On, AR360, Wardrobe Sync, and Instaflow, users enjoy an immersi
         <p>&copy; 2023 Shiny | <a href="mailto:shiny1256u@gmail.com">shiny1256u@gmail.com</a> | +91 8438517957</p>
         <ul class="socials">
             <li>
-                <a href="https://github.com/Shiny-1256" target="_blank"><img src="./assest/git_icon.png" alt="github"></a>
+                <a href="https://github.com/Shiny-1256" target="_blank"><img src=".assest/git_icon.png" alt="github"></a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/shiny-u/" target="_blank"><img src="./assest/linkedin_icon.png" alt="linkedin"></a>
+                <a href="https://www.linkedin.com/in/shiny-u/" target="_blank"><img src=".assest/linkedin_icon.png" alt="linkedin"></a>
             </li>
             <li>
-                <a href="https://www.instagram.com/shishi_an005?igsh=MWtidG00aGRobWw3dQ==" target="_blank"><img src="./assest/IG_icon.png" alt="instagram"></a>
+                <a href="https://www.instagram.com/shishi_an005?igsh=MWtidG00aGRobWw3dQ==" target="_blank"><img src=".assest/IG_icon.png" alt="instagram"></a>
             </li>
             <li>
-                <a href="https://wwww.facebook.com/" target="_blank"><img src="./assest/Facebook_icon.png" alt="facebook"></a>
+                <a href="https://wwww.facebook.com/" target="_blank"><img src=".assest/Facebook_icon.png" alt="facebook"></a>
             </li>
         </ul>
       </footer>
